# automated-lie-detection

./: run.sh
data/: autobiographical_statements.csv  temp_uploaded.csv
data/exp_data/: batch_predictions.csv
docs/: automated_lie_detection.html  automated_lie_detection.qmd
src/: README.md  pyproject.toml
src/automated_lie_detection_package/: __init__.py  app.py  cli.py  utility.py
src/automated_lie_detection_package/pages/: batch_lie_detection_page.py  lie_detection_page.py  welcome_page.py
tests/: test_model_download.py
